# colibri-vldb2024

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
src/: CMakeLists.txt
src/duckdb/: DuckDB.cpp  DuckDB.hpp  DuckDBClient.cpp  DuckDBClient.hpp  DuckDBConnectionConfig.hpp  DuckDBDriver.cpp  DuckDBDriver.hpp  DuckDBInterface.cpp  DuckDBInterface.hpp
src/duckdb/hattrick/: HattrickDriver.cpp  HattrickDriver.hpp  HattrickQueryClient.cpp  HattrickQueryClient.hpp  HattrickRefreshClient.cpp  HattrickRefreshClient.hpp
src/duckdb/tpch/: TpchDriver.cpp  TpchDriver.hpp  TpchQueryClient.cpp  TpchQueryClient.hpp  TpchRefreshClient.cpp  TpchRefreshClient.hpp
src/postgres/: Postgres.cpp  Postgres.hpp  PostgresClient.cpp  PostgresClient.hpp  PostgresDriver.cpp  PostgresDriver.hpp
src/postgres/hattrick/: HattrickDriver.cpp  HattrickDriver.hpp  HattrickQueryClient.cpp  HattrickQueryClient.hpp  HattrickRefreshClient.cpp  HattrickRefreshClient.hpp
src/postgres/hybench/: HyBenchDriver.cpp  HyBenchDriver.hpp  HyBenchOLAPClient.cpp  HyBenchOLAPClient.hpp  HyBenchOLTPClient.cpp  HyBenchOLTPClient.hpp  HyBenchQueryClient.cpp  HyBenchQueryClient.hpp  HyBenchRefreshClient.cpp  HyBenchRefreshClient.hpp
src/postgres/tatp/: TatpClient.cpp  TatpClient.hpp  TatpDriver.cpp  TatpDriver.hpp
src/postgres/tpcc/: TpccClient.cpp  TpccClient.hpp  TpccDriver.cpp  TpccDriver.hpp
src/postgres/tpcch/: TpcchDriver.cpp  TpcchDriver.hpp  TpcchQueryClient.cpp  TpcchQueryClient.hpp
src/postgres/tpch/: TpchDriver.cpp  TpchDriver.hpp  TpchQueryClient.cpp  TpchQueryClient.hpp  TpchRefreshClient.cpp  TpchRefreshClient.hpp
src/singlestore/: SingleStore.cpp  SingleStore.hpp  SingleStoreClient.cpp  SingleStoreClient.hpp  SingleStoreConnectionConfig.cpp  SingleStoreConnectionConfig.hpp  SingleStoreDriver.cpp  SingleStoreDriver.hpp
src/singlestore/hattrick/: HattrickDriver.cpp  HattrickDriver.hpp  HattrickQueryClient.cpp  HattrickQueryClient.hpp  HattrickRefreshClient.cpp  HattrickRefreshClient.hpp
src/singlestore/tatp/: TatpClient.cpp  TatpClient.hpp  TatpDriver.cpp  TatpDriver.hpp
src/singlestore/tpcc/: TpccClient.cpp  TpccClient.hpp  TpccDriver.cpp  TpccDriver.hpp
src/singlestore/tpcch/: TpcchDriver.cpp  TpcchDriver.hpp  TpcchQueryClient.cpp  TpcchQueryClient.hpp
src/singlestore/tpch/: TpchDriver.cpp  TpchDriver.hpp  TpchQueryClient.cpp  TpchQueryClient.hpp  TpchRefreshClient.cpp  TpchRefreshClient.hpp
src/tidb/: TiDB.cpp  TiDB.hpp  TiDBClient.cpp  TiDBClient.hpp  TiDBDriver.cpp  TiDBDriver.hpp
src/tidb/hattrick/: HattrickDriver.cpp  HattrickDriver.hpp  HattrickQueryClient.cpp  HattrickQueryClient.hpp  HattrickRefreshClient.cpp  HattrickRefreshClient.hpp
src/tidb/tpch/: TpchDriver.cpp  TpchDriver.hpp  TpchQueryClient.cpp  TpchQueryClient.hpp  TpchRefreshClient.cpp  TpchRefreshClient.hpp
src/txbench/: BenchmarkConfig.cpp  BenchmarkConfig.hpp  ConnectionConfig.cpp  ConnectionConfig.hpp  Database.cpp  Database.hpp  DatabaseClient.cpp  DatabaseClient.hpp  DatabaseDriver.cpp  DatabaseDriver.hpp  DriverConfig.cpp  DriverConfig.hpp  Exception.hpp  Network.hpp  QueryRuntime.hpp  Random.cpp  Random.hpp  Status.hpp
src/txbench/hattrick/: Generator.cpp  Generator.hpp  QueryGenerator.cpp  QueryGenerator.hpp  TransactionGenerator.cpp  TransactionGenerator.hpp
src/txbench/hybench/: Config.cpp  Config.hpp  Generator.cpp  Generator.hpp  QueryGenerator.cpp  QueryGenerator.hpp  TransactionGenerator.cpp  TransactionGenerator.hpp
src/txbench/io/: CsvWriter.cpp  CsvWriter.hpp  JsonParser.cpp  JsonParser.hpp  ProgressPrinter.cpp  ProgressPrinter.hpp
src/txbench/odbc/: Connection.cpp  Connection.hpp  Environment.cpp  Environment.hpp  OdbcConnectionConfig.cpp  OdbcConnectionConfig.hpp  OdbcError.cpp  OdbcError.hpp  PreparedStatement.cpp  PreparedStatement.hpp  Statement.cpp  Statement.hpp
src/txbench/pq/: PqConnection.cpp  PqConnection.hpp  PqConnectionConfig.cpp  PqConnectionConfig.hpp  PqPreparedStatement.cpp  PqPreparedStatement.hpp  PqResult.cpp  PqResult.hpp
src/txbench/tatp/: TatpGenerator.cpp  TatpGenerator.hpp  TatpTransactionGenerator.cpp  TatpTransactionGenerator.hpp
src/txbench/tpcc/: TpccConfig.cpp  TpccConfig.hpp  TpccGenerator.cpp  TpccGenerator.hpp  TpccTransactionGenerator.cpp  TpccTransactionGenerator.hpp
src/txbench/tpcch/: TpcchGenerator.cpp  TpcchGenerator.hpp
src/txbench/tpch/: TpchQueryGenerator.cpp  TpchQueryGenerator.hpp
src/txbench/util/: sql_helper.hpp
src/umbra/: Umbra.cpp  Umbra.hpp  UmbraClient.cpp  UmbraClient.hpp  UmbraConfig.cpp  UmbraConfig.hpp  UmbraConnectionConfig.cpp  UmbraConnectionConfig.hpp  UmbraDriver.cpp  UmbraDriver.hpp
src/umbra/hattrick/: HattrickDriver.cpp  HattrickDriver.hpp  HattrickQueryClient.cpp  HattrickQueryClient.hpp  HattrickRefreshClient.cpp  HattrickRefreshClient.hpp
src/umbra/hybench/: HyBenchDriver.cpp  HyBenchDriver.hpp  HyBenchOLAPClient.cpp  HyBenchOLAPClient.hpp  HyBenchOLTPClient.cpp  HyBenchOLTPClient.hpp  HyBenchQueryClient.cpp  HyBenchQueryClient.hpp  HyBenchRefreshClient.cpp  HyBenchRefreshClient.hpp
src/umbra/load/: LoadConfig.cpp  LoadConfig.hpp
src/umbra/tatp/: TatpClient.cpp  TatpClient.hpp  TatpDriver.cpp  TatpDriver.hpp
src/umbra/tpcc/: TpccClient.cpp  TpccClient.hpp  TpccDriver.cpp  TpccDriver.hpp
src/umbra/tpcch/: TpcchDriver.cpp  TpcchDriver.hpp  TpcchQueryClient.cpp  TpcchQueryClient.hpp
src/umbra/tpch/: TpchDriver.cpp  TpchDriver.hpp  TpchQueryClient.cpp  TpchQueryClient.hpp  TpchRefreshClient.cpp  TpchRefreshClient.hpp
tools/datagen/: CMakeLists.txt  main.cpp
tools/datagen/generator/: HattrickGenerator.cpp  HattrickGenerator.hpp  (+8 more)
(+3844 files in other folders)
